fix issue with trash icon and qty buttons on mobile

--- a/client/src/styles/cart.css
+++ b/client/src/styles/cart.css
@@ -131,10 +131,9 @@
         width: 100%;
         margin-right: 0px;
         overflow-y: scroll;
-        height: 74vh;
+        height: 70vh;
         padding-right: 0px;
         scroll-behavior: smooth;
-        margin-top: 115px;
     }
 
     .mobile-header {
@@ -146,7 +145,6 @@
         padding-bottom: 10px;
         margin-bottom: 20px;
         display: block;
-        position: fixed;
     }
 
     .mobile-footer {
